[tool.poetry]
name = "m09-01"
version = "0.1.0"
description = ""
authors = ["paukdv <paukdv@gmail.com>"]
readme = "README.md"
packages = [{include = "m09_01"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
scrapy = "^2.10.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
